--- a/index.html
+++ b/index.html
@@ -323,13 +323,13 @@
     <script src="js/lead-capture.js"></script>
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M5L2JFYEEP"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-XXXXXXXXXX');
-      gtag('config', 'AW-XXXXXXXXXX'); // Google Ads
+      gtag('config', 'G-M5L2JFYEEP');
+      gtag('config', 'AW-11482096216'); // Google Ads
     </script>
     
     <!-- Event snippet for Formulário de contato conversion page -->
@@ -341,7 +341,7 @@
           }
         };
         gtag('event', 'conversion', {
-            'send_to': 'AW-XXXXXXXXXX/XXXXXXXXXX',
+            'send_to': 'AW-11482096216',
             'event_callback': callback
         });
         return false;
