--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pontes & Silva Cálculos Judiciais – Cálculos Judiciais com Precisão, Agilidade e Confiança.</title>
+    <title>Pontes &amp; Silva Cálculos Judiciais – Cálculos Judiciais com Precisão</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11482096216">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-11482096216');
+    </script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Meta tags para SEO e Google Ads -->
-    <meta name="description" content="Pontes & Silva Cálculos Judiciais - CNPJ 51.362.258/0001-79. Cálculos trabalhistas, federais e cíveis com precisão, agilidade e confiança. Atendemos advogados, contadores e clientes em todo o Brasil.">
+    <meta name="description" content="Pontes &amp; Silva Cálculos Judiciais - CNPJ 51.362.258/0001-79. Cálculos trabalhistas, federais e cíveis com precisão, agilidade e confiança. Atendemos advogados, contadores e clientes em todo o Brasil.">
     <meta name="keywords" content="cálculos judiciais, cálculos trabalhistas, cálculos federais, cálculos cíveis, perícia contábil, laudos técnicos, atualização de dívidas, correção monetária">
     <!-- Open Graph para compartilhamento em redes sociais -->
-    <meta property="og:title" content="Pontes & Silva Cálculos Judiciais">
+    <meta property="og:title" content="Pontes &amp; Silva Cálculos Judiciais">
     <meta property="og:description" content="Cálculos Judiciais com Precisão, Agilidade e Confiança. CNPJ 51.362.258/0001-79">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.pscalculos.com.br">
@@ -30,7 +40,7 @@
     {
       "@context": "https://schema.org",
       "@type": "LegalService",
-      "name": "Pontes & Silva Cálculos Judiciais",
+      "name": "Pontes &amp; Silva Cálculos Judiciais",
       "image": "images/logo.png",
       "url": "https://www.pscalculos.com.br",
       "telephone": "+5521991159686",
@@ -56,14 +66,14 @@
 <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MNMKX8V2"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    height="0" width="0" title="Google Tag Manager" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     
     <!-- Cabeçalho -->
     <header>
         <div class="container">
             <div class="logo">
-                <a href="#"><img src="images/logo.png" alt="Pontes & Silva Cálculos Judiciais"></a>
+                <a href="#"><img src="images/logo.png" alt="Pontes &amp; Silva Cálculos Judiciais"></a>
             </div>
             <nav>
                 <ul>
@@ -173,7 +183,7 @@
     <!-- Números -->
     <section class="numbers">
         <div class="container">
-            <h2>Números da Pontes & Silva</h2>
+            <h2>Números da Pontes &amp; Silva</h2>
             <p>Com mais de 10 anos de experiência e mais de 100 clientes satisfeitos em todo o Brasil.</p>
             
             <div class="numbers-grid">
@@ -239,7 +249,7 @@
                     <i class="fas fa-balance-scale"></i>
                 </div>
                 <div class="faq-content">
-                    <h3>Como a Pontes & Silva pode me ajudar?</h3>
+                    <h3>Como a Pontes &amp; Silva pode me ajudar?</h3>
                     <p>Nossa equipe é especializada em cálculos judiciais, estamos prontos para analisar o seu processo e garantir que todos os valores envolvidos estejam corretos e justos. Oferecemos soluções completas e eficientes para todas as suas necessidades jurídicas.</p>
                 </div>
             </div>
@@ -301,10 +311,10 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="images/logo.png" alt="Pontes & Silva Cálculos Judiciais">
+                    <img src="images/logo.png" alt="Pontes &amp; Silva Cálculos Judiciais">
                 </div>
                 <div class="footer-info">
-                    <p>&copy; 2025 Pontes & Silva Cálculos Judiciais. CNPJ 51.362.258/0001-79. Todos os direitos reservados.</p>
+                    <p>&copy; 2025 Pontes &amp; Silva Cálculos Judiciais. CNPJ 51.362.258/0001-79. Todos os direitos reservados.</p>
                 </div>
             </div>
         </div>
