--- a/index.html
+++ b/index.html
@@ -333,12 +333,12 @@
     <script src="js/lead-capture.js"></script>
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M5L2JFYEEP"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JZSPT4951W"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-M5L2JFYEEP');
+      gtag('config', 'G-JZSPT4951W');
       gtag('config', 'AW-11482096216'); // Google Ads
     </script>
     
