--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             </nav>
         </div>
     </header>
+    <form id="lead-form" onsubmit="return enviarFormulario(event)">
 
     <!-- Banner Principal -->
     <section class="hero">
