--- a/index.html
+++ b/index.html
@@ -371,6 +371,16 @@
       gtag('config', 'G-M5L2JFYEEP');
       gtag('config', 'AW-11482096216'); // Google Ads
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GT-KTRGCCQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'GT-KTRGCCQ');
+</script>
+
     
     <!-- Event snippet for Formulário de contato conversion page -->
     <script>
