--- a/obrigado.html
+++ b/obrigado.html
@@ -185,6 +185,17 @@
   gtag('config', 'GT-KTRGCCQ');
 </script>
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JZSPT4951W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JZSPT4951W');
+</script>
+
+
     
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-M5L2JFYEEP"></script>
