--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pontes &amp; Silva Cálculos Judiciais – Cálculos Judiciais com Precisão</title>
+       <title>Cálculos Judiciais para Advogados | Pontes & Silva | Precisão e Agilidade</title>>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11482096216">
     </script>
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Meta tags para SEO e Google Ads -->
-    <meta name="description" content="Pontes &amp; Silva Cálculos Judiciais - CNPJ 51.362.258/0001-79. Cálculos trabalhistas, federais e cíveis com precisão, agilidade e confiança. Atendemos advogados, contadores e clientes em todo o Brasil.">
-    <meta name="keywords" content="cálculos judiciais, cálculos trabalhistas, cálculos federais, cálculos cíveis, perícia contábil, laudos técnicos, atualização de dívidas, correção monetária">
+     <meta name="description" content="Serviços especializados de cálculos judiciais para advogados e escritórios de advocacia. Cálculos trabalhistas, cíveis e federais com precisão e agilidade. Otimize seu tempo e garanta os melhores resultados para seus clientes. Atendimento nacional. CNPJ 51.362.258/0001-79.">.">
+    <meta name="keywords" content="cálculos judiciais para advogados, liquidação de sentença, cálculos trabalhistas para advogados, cálculos cíveis para advogados, cálculos federais para advogados, perícia contábil judicial, assistente técnico contábil, laudos periciais contábeis, atualização de débitos judiciais, serviços para advogados">
     <!-- Open Graph para compartilhamento em redes sociais -->
     <meta property="og:title" content="Pontes &amp; Silva Cálculos Judiciais">
     <meta property="og:description" content="Cálculos Judiciais com Precisão, Agilidade e Confiança. CNPJ 51.362.258/0001-79">
@@ -28,13 +28,6 @@
     <meta property="og:image" content="images/logo.png">
     <!-- Google Ads tags -->
     <meta name="google-site-verification" content="seu-codigo-de-verificacao">
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','AW-11482096216');</script>
-    <!-- End Google Tag Manager -->
     <!-- Structured Data para SEO -->
     <script type="application/ld+json">
     {
@@ -53,7 +46,7 @@
         "latitude": -22.9068,
         "longitude": -43.1729
       },
-      "description": "Cálculos judiciais trabalhistas, federais e cíveis com precisão, agilidade e confiança.",
+      "description": "Serviços especializados de cálculos judiciais trabalhistas, federais e cíveis para advogados, garantindo precisão e agilidade.",
       "priceRange": "$$",
       "openingHours": "Mo-Fr 09:00-18:00",
       "sameAs": [
@@ -64,10 +57,6 @@
     </script>
 </head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MNMKX8V2"
-    height="0" width="0" title="Google Tag Manager" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     
     <!-- Cabeçalho -->
     <header>
@@ -92,8 +81,8 @@
                 <div class="icon-container fade-in">
                     <i class="fas fa-balance-scale"></i>
                 </div>
-                <h1 class="slide-in-left">Cálculos Judiciais com Precisão, Agilidade e Confiança</h1>
-                <p class="slide-in-right">Atendemos advogados, contadores que precisam de cálculos claros, atualizados e bem fundamentados.</p>
+                <h1 class="slide-in-left">Cálculos Judiciais Especializados para Advogados: Precisão e Agilidade</h1>
+                <p class="slide-in-right">Auxiliamos advogados e escritórios de advocacia com cálculos judiciais claros, atualizados e bem fundamentados para seus processos.</p>
                 <div class="cta-buttons fade-in">
                     <a href="#servicos" class="btn btn-primary pulse">Saiba mais</a>
                     <a href="https://wa.me/5521991159686" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Contate-nos</a>
